--- a/news/templates/all-news/base.html
+++ b/news/templates/all-news/base.html
@@ -2,5 +2,12 @@
 <html>
     <head>
         <meta charset='utf-8'>
+        {% if title% }
+        <title> Moringa Tribune - {{title}}</title>
+        {% else %}
+        <title> Moringa Tribune </title>
     </head>
+    <body>
+        {% block content %} <h1>News for {{date|date:"l d-F Y"}} </h1> {%endblock%}
+    </body>
 </html>
